kubernetes/utility/apps/forgejo-system/forgejo/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  annotations:
    external-dns/unifi: "true"
spec:
  parentRefs:
    - name: envoy
      namespace: networking
      sectionName: https
  hostnames:
    - git.utility.techtales.io
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 80
